--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,16 @@
 body {
+	font-family: "Trebuchet MS", Helvetica, Sans-serif;
 	background: beige;
-	font-size: 1em;
+}
+
+h1 {
+	color: #008080;
+	text-shadow: 2px 2px 5px gray;
+}
+
+hr {
+	color: #008080;
+	font-size: 5px;
 }
 
 .clear-fix{
@@ -8,14 +18,17 @@ body {
 }
 
 .small-font {
-	font-family: "Trebuchet MS", Helvetica, Sans-serif;;
-	font-size: .7em;
+	font: .7em "Trebuchet MS", Helvetica, Sans-serif;
+}
+
+.input-common {
+	width: 100%;
 }
 
 .button-common {
 	border: 0;
 	padding: 5px 20px;
-	background: teal;
+	background: #008080;
 	color: white;
 	outline: none;
 	cursor: pointer;
@@ -24,20 +37,20 @@ body {
 
 .button-common:active {
 	transform: translate(2px, 2px);
-	box-shadow: 1px 1px 10px 0px gray;
+	box-shadow: 1px 1px 10px 0px lightgray;
 	
 }
 
 .button-common:hover {
-	box-shadow: 5px 5px 10px 0px gray, 2px 2px 10px 2px gray;
+	box-shadow: 5px 5px 10px 0px gray, 2px 2px 10px 2px lightgray;
 }
 
 .elem-shadow {
-	box-shadow: 5px 5px 10px 0px gray, 5px 5px 20px 2px gray;
+	box-shadow: 5px 5px 10px 0px gray, 5px 5px 20px 2px lightgray;
 }
 
 .main-container {
-	max-width: 500px;
+	max-width: 90%;
 	margin: auto;
 }
 
