--- a/css/index.css
+++ b/css/index.css
@@ -3,14 +3,16 @@ body {
 	background: beige;
 }
 
-h1 {
-	color: #008080;
-	text-shadow: 2px 2px 5px gray;
+.title-text {
+	color: #DEB887;
+	text-shadow: 2px 2px 5px #5F9EA0;
 }
 
 hr {
-	color: #008080;
-	font-size: 5px;
+	height: 5px;
+	border: none;
+	background: #DEB887;
+	box-shadow: 2px 2px 5px #5F9EA0;
 }
 
 .clear-fix{
@@ -25,20 +27,28 @@ hr {
 	width: 100%;
 }
 
+.input-tall {
+	height: 30px;
+}
+
+.input-medium {
+	height: 20px;
+}
+
 .button-common {
 	border: 0;
-	padding: 5px 20px;
-	background: #008080;
+	padding: 10px 25px;
+	margin: 20px 0px 5px 10px;
+	background: #5F9EA0;
 	color: white;
 	outline: none;
 	cursor: pointer;
-	border: 2px solid gray;
+
 }
 
 .button-common:active {
-	transform: translate(2px, 2px);
-	box-shadow: 1px 1px 10px 0px lightgray;
-	
+	transform: translate(0px, 2px);
+	box-shadow: 0px 0px 10px 0px lightgray;
 }
 
 .button-common:hover {
@@ -52,6 +62,13 @@ hr {
 .main-container {
 	max-width: 90%;
 	margin: auto;
+	margin-bottom: 50px;
+}
+
+.login-main-container {
+	max-width: 500px;
+	margin: auto;
+	margin-bottom: 50px;
 }
 
 .login-container {
@@ -59,14 +76,23 @@ hr {
 	margin: 50px;
 	padding: 50px;
 	overflow: hidden;
+	border-radius: 30px;
 }
 
 .login-container div {
-	margin: 20px;
+	margin: 20px 2px;
 }
 
-.button-container {
-	float: right;
+.login-button-container {
+	text-align: right;
+}
+
+.username-div {
+	float: left;
+}
+
+.password-div label{
+	padding-left: 5px;
 }
 
 
